fix(ui): scrollbar colors; post max-width

--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@
 }
 
 :root {
-  scrollbar-color: #e9e9e9 #ffffff;
+  scrollbar-color: #d9d9d9 #ffffff;
   scrollbar-width: thin;
   scrollbar-gutter: stable both;
 }
@@ -48,11 +48,11 @@
   height: 6px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #e9e9e9;
+  background-color: #d9d9d9;
   border-radius: 4px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #cccccc;
+  background-color: #bbbbbb;
 }
 ::-webkit-scrollbar-track {
   background-color: #ffffff;
